--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -11,7 +11,7 @@
 @import url('novelties.css');
 @import url('aboutUs.css');
 @import url('books.css');
-@import url('jmgmodal.css');
+@import url('modals.css');
 
 /* ESTILOS   GENERALES */
 .flex-between {
