--- a/spellBook/src/views/admin/editUser.ejs
+++ b/spellBook/src/views/admin/editUser.ejs
@@ -5,7 +5,7 @@
 
   <body>
     <!-- HEADER -->
-    <header class="header error-bg relative">
+    <header class="header error-bg ">
       <div class="star star1"></div>
       <div class="star star2"></div>
       <div class="star star3"></div>
