--- a/spellBook/src/views/partials/footer.ejs
+++ b/spellBook/src/views/partials/footer.ejs
@@ -14,9 +14,8 @@
                 <p class="footerTitle">Mi Cuenta</p>
             </div>
             <div class="footer-options">
-                <p class="footerP">Ingresar</p>
+                <a class="footerP" href="/user/login">Ingresar</a>
                 <p class="footerP">Ver Carrito</p>
-                <p class="footerP">Finalizar Compra</p>
             </div>
       </section>
 
