--- a/spellBook/src/views/users/profile.ejs
+++ b/spellBook/src/views/users/profile.ejs
@@ -120,7 +120,7 @@
               type="date"
               name="date"
               id="date"
-              value=""
+              value="<%= user.birthday %>"
             />
           </p>
 
