--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -4,29 +4,7 @@
 <%- include('../partials/head') %>
 
   <body>
-    <!-- HEADER -->
-    <header class="header error-bg relative">
-      <div class="star star1"></div>
-      <div class="star star2"></div>
-      <div class="star star3"></div>
-      <div class="star star4"></div>
-      <div class="star star5"></div>
-      <div class="star star6"></div>
-      <div class="star star7"></div>
-      <div class="star star8"></div>
-      <!-- LOGO CON LINK AL HOME -->
-      <div class="logo">
-        <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
-
-      </div>
-
-      <!-- BURGER MENU -->
-      <a href="/admin/addProduct">
-        <div class="">
-          <i class="far fa-user" id="icon"></i>
-        </div>
-      </a>
-    </header>
+   <%- include('../partials/headerAdmin') %> 
     <main>
       <!--LIST OF PRODUCTS SECTION-->
       <section class="product-list">
@@ -49,10 +27,13 @@
         </div>
         <div class="search-table">
           <h2>Libros</h2>
-          <label name="search" id="search">
-            <i class="fas fa-search "></i>
-            <input class="" type="search" name="search" id="" placeholder="">
-          </label>
+          <form action="/admin/search" method="get" id="">
+            <label name="search" id="search">
+              <i class="fas fa-search "></i>
+              <input class="" type="search" name="search" id="" placeholder="">
+            </label>
+          </form>
+        
         </div>
         <% if (locals.errors) { %>
           <% errors.forEach(err=> { %>
@@ -149,7 +130,7 @@
             <fieldset>
               <label for="amount">Stock:</label>
               <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="cantidad" id="amount" />
+                <input class="product-inputs" type="number" name="cantidad" id="amount" min="0" pattern="^[0-9]+" />
                 <p class="warning" id="cantidad-error"></p>
               </div>
             </fieldset>
@@ -157,7 +138,7 @@
               <label for="precio">Precio:</label>
 
               <div class="cont-flex-column">
-                <input class="product-inputs" type="number" id="precio" name="precio" />
+                <input class="product-inputs" type="number" id="precio" name="precio" min="0" pattern="^[0-9]+" />
                 <p class="warning" id="precio-error"></p>
               </div>
             </fieldset>
@@ -177,7 +158,7 @@
             <fieldset>
               <label for="publisher">Editorial:</label>
               <div class="cont-flex-column">
-                <input class="product-inputs" type="text" name="publisher" id="publisher" />
+                <input class="product-inputs" type="text" name="publisher" id="publisher"  />
                 <p class="warning" id="publisher-error"></p>
               </div>
             </fieldset>
@@ -191,14 +172,14 @@
             <fieldset>
               <label for="publication_year">Año de Publicación:</label>
               <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="publication_year" id="publication_year" />
+                <input class="product-inputs" type="number" name="publication_year" id="publication_year" min="1" pattern="^[0-9]+" />
                 <p class="warning" id="publication_year-error"></p>
               </div>
             </fieldset>
             <fieldset>
               <label for="pages">Nro de Páginas:</label>
               <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="pages" id="pages" />
+                <input class="product-inputs" type="number" name="pages" id="pages" min="1" pattern="^[0-9]+"/>
                 <p class="warning" id="pages-error"></p>
               </div>
             </fieldset>
