--- a/spellBook/src/views/admin/editUser.ejs
+++ b/spellBook/src/views/admin/editUser.ejs
@@ -5,23 +5,10 @@
 
   <body>
     <!-- HEADER -->
-    <header class="header error-bg ">
-      <div class="star star1"></div>
-      <div class="star star2"></div>
-      <div class="star star3"></div>
-      <div class="star star4"></div>
-      <div class="star star5"></div>
-      <div class="star star6"></div>
-      <div class="star star7"></div>
-      <div class="star star8"></div>
-      <!-- LOGO CON LINK AL HOME -->
-      <div class="logo">
-        <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
-      </div>
-    </header>
+    <%- include('../partials/headerAdmin') %> 
 
     <body>
-      <main class="conteiner-main">
+      <main class="edit-user-conteiner-main">
 
         <!-- FORMULARIO DE REGISTRO -->
         <form action="/admin/users/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data"
