--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -152,7 +152,7 @@
         </div>
           <!-- Botón de comprar -->
         <div>
-          <button class="button" type="button" value="<%= book %>" id="buy-button">Comprar</button>
+          <button class="button" type="button" value="<%= book.id%>" id="buy-button">Comprar</button>
         </div>
       </div>
       </article>
