--- a/spellBook/src/views/products/shoppingCart.ejs
+++ b/spellBook/src/views/products/shoppingCart.ejs
@@ -15,57 +15,43 @@
     <h1 class="title">Mi Carrito</h1>
 
 <!-- SECCIÓN DE PRODUCTO Y CANTIDAD -->    
-    <section>
+    <section id="conteiner-cart-items">
+        
         <!-- TODOS LOS PRODUCTOS A COMPRAR -->
-        <article class="conteiner-item">   
-            <div class="item-left">
-                <img class="buy-image" src="images/libros/harry-potter-y-el-caliz-de-fuego.jpg" alt="">
-                <p>Harry Potter y el caliz de fuego</p>
-            </div>
-            <div class="item-right">   
-                <i class="far fa-trash-alt right"></i>
-                <p>$ 1200</p>
+        
+        <article id="conteiner-cart-items-1"></article>
 
-                <!-- BOTON DE CANTIDAD DE UNIDADES -->
-                <form action="/carrito" method="GET">
-                    <label>Cantidad: </label>
-                    <select  class="quantity-button" name="cantidad">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                </form>
-            </div>
-        </article>
     </section>
+    <button class="cart" id="clear-cart"> Vaciar carrito </button>
 
-    <!-- DETALLE DE COMPRA -->
-    <section class="detail-buy">
+    
+        <!-- DETALLE DE COMPRA -->
+        <section class="detail-buy" id="detail-buy">    
+    
         <!-- TÍTULO DE SECCIÓN -->
         <h3 class="detail-title">Detalle de la Compra</h3>
         <hr class="one-line">
+
         <!-- SECCIÓN DETALLE DE COMPRA -->
-        <div class="conteiner-price">
-            <p>Harry Potter y el caliz de fuego</p>
-            <p>$ 1200</p>
+        <div id="conteiner-price" >
         </div>
         <div class="conteiner-price">
             <p>SubTotal </p>
-            <p>$ 1200</p>
+            <p id="subtotal"></p>
         </div>
+
+        
         <div class="conteiner-price total">
             <p>Total</p>
-            <p>$ 1200</p>
+            <p id="total"></p>
         </div>
         <a href="#" >
-            <button class="to-pay button"  type="submit">Ir al Pago</button>
+            <button class="cart"  type="submit">Ir al Pago</button>
         </a>
     </section>
 
     <!-- TÍTULO RECOMENDADOS -->
-    <h3 class="recommended-title">Recomendados para Vos</h3>
+    <h3 class="recommended-title" id="recommended-title">Recomendados para Vos</h3>
 
 
     <!-- SECCIÓN RECOMENDADOS -->
@@ -102,7 +88,9 @@
   <%- include('../partials/footer') %>
 
 <!-- LINK DEL JS DEL HEADER -->
+<script src="js/cart.js"></script>
 <script src="js/header.js"></script>
+
 
 </body>
 </html>
