--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -5,6 +5,18 @@
 <body>
   <!-- HEADER -->
   <%- include('../partials/headerAdmin') %> 
+
+    <!-- MODAL DE ACEPTAR -->
+    <div class="modal-container" id="modal-clear-user">
+      <div class="modal-body">
+        <p>¿Estas seguro de eliminar este usuario?</p>
+        <div class="modal-action">
+          <button class="modal-button" id="modal-button-clear-user">Eliminar</button>
+          <button class="modal-button" id="modal-button-cancel-clear-user">Cancelar</button>
+        </div>
+      </div>    
+    </div>
+
   <main>
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
