se agrega preview en edit product y validacion del input file

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -311,6 +311,7 @@ section.product-form{
         display: flex;
         flex-direction: row;
         align-items: unset;
+        margin-bottom: 0px ;
     }
 }
 @media (min-width: 800px) {
