--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -9,15 +9,12 @@
       <!--LIST OF PRODUCTS SECTION-->
       <section class="product-list">
         <!--LINKS TO Agregar libro, Bell AND user-->
-        <h1>Hola <%= /* locals.userLog.name */ %>
+        <h1 class ="headline-admin">Panel de control
         </h1>
         <div class="belluser">
           <a href="/admin/users" class="display-shop">Ir a usuarios</a>
           <button class="display-shop" id="button-create">Agregar libro</button>
           <a href="/user/login">
-            <div class="">
-              <i class="far fa-bell" id="icon"></i>
-            </div>
           </a>
           <a href="/user/login">
             <div class="">
@@ -26,7 +23,7 @@
           </a>
         </div>
         <div class="search-table">
-          <h2>Libros</h2>
+          <h2 class="admin-libros">Libros</h2>
           <form action="/admin/search" method="get" id="">
             <label name="search" id="search">
               <i class="fas fa-search "></i>
