se mergea master y se arreglan estilos de los main en las vistas admin

--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -17,7 +17,7 @@
       </div>    
     </div>
 
-  <main>
+  <main class="admin-main">
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
