--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -23,16 +23,18 @@
     color: var(--color-beige);
     cursor: pointer;
   }
-main{
+.admin-main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 section.product-list{
     background-size: contain;
     background-repeat: no-repeat;
     margin: 75px auto;
     padding: 0 1rem;
+    width: 100%;
 }
 
 section .belluser{
@@ -129,7 +131,7 @@ section.product-form{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    display: flex;
+    display: none;
     top: 60px;
 }
 section.productEdit-form{
