--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -26,7 +26,7 @@
     </div>    
   </div>
 
-    <main>
+    <main class="admin-main">
       <!--LIST OF PRODUCTS SECTION-->
       <section class="product-list">
         <!--LINKS TO Agregar libro, Bell AND user-->
