se hace funcionar mail de contacto y se le pone un modal

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -334,6 +334,7 @@ form#product fieldset input.display-shop{
         flex-direction: row;
         align-items: unset;
         margin-bottom: 0px ;
+        padding: 60px 0 0;
     }
 }
 @media (min-width: 800px) {
@@ -348,5 +349,7 @@ form#product fieldset input.display-shop{
     section.product-form{
         top: 120px;       
     }
-   
+    .edit-container {
+        padding: 120px 0 0;
+    }
 }
