--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -14,6 +14,9 @@
 @import url('modals.css');
 
 /* ESTILOS   GENERALES */
+.mtop-60px {
+    margin-top: 60px;
+}
 .flex-between {
     display: flex;
     align-content: space-between;
@@ -54,6 +57,9 @@
 }
 .f-1rem {
     font-size: 1rem;
+}
+.f-2rem {
+    font-size: 2rem;
 }
 /* EFECTO DE LOS LIBROS */
 .book-cover {
