--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -6,7 +6,7 @@
 <body>
 <!-- HEADER -->
 <%- include('../partials/header') %> 
-<seccion class="conteiner-main">
+<seccion class="conteiner-main mtop-60px">
   <div class="headline">
     <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
     <h1>Novedades</h1>
