--- a/spellBook/public/stylesheets/header.css
+++ b/spellBook/public/stylesheets/header.css
@@ -195,7 +195,7 @@
   .wrap {
     min-width:420px;
     width:100%;
-    height: 150px;
+   /*  height: 150px; */
   }
   .header {
     height: 120px;
